// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiceList Renders with extra successes 1`] = `
<div
  className="dice-list"
>
  <h2>
    Successes 
    (
    4 + 2 = 6
    )
  </h2>
  <ul>
    <li
      className="die-image-container free-success"
    >
      <label>
        S
      </label>
    </li>
    <li
      className="die-image-container free-success"
    >
      <label>
        S
      </label>
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-5"
        src="dice-5.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-4"
        src="dice-4.png"
      />
    </li>
  </ul>
</div>
`;

exports[`DiceList Renders with negative successes 1`] = `
<div
  className="dice-list"
>
  <h2>
    Successes 
    (
    4 - 2 = 2
    )
  </h2>
  <ul>
    
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container cancelled"
    >
      <img
        alt="die-5"
        src="dice-5.png"
      />
    </li>
    <li
      className="die-image-container cancelled"
    >
      <img
        alt="die-4"
        src="dice-4.png"
      />
    </li>
  </ul>
</div>
`;

exports[`DiceList Renders with no dice 1`] = `
<div
  className="dice-list"
>
  <h2>
    Successes 
    (
    0
    )
  </h2>
  <ul>
    
  </ul>
</div>
`;

exports[`DiceList Renders with rerolls 1`] = `
<div
  className="dice-list"
>
  <h2>
    Successes 
    (
    4
    )
  </h2>
  <ul>
    
    <li
      className="die-image-container rerolled"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container rerolled"
    >
      <img
        alt="die-5"
        src="dice-5.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-4"
        src="dice-4.png"
      />
    </li>
  </ul>
</div>
`;

exports[`DiceList Renders without rerolls or extra successes 1`] = `
<div
  className="dice-list"
>
  <h2>
    Successes 
    (
    4
    )
  </h2>
  <ul>
    
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-6"
        src="dice-6.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-5"
        src="dice-5.png"
      />
    </li>
    <li
      className="die-image-container"
    >
      <img
        alt="die-4"
        src="dice-4.png"
      />
    </li>
  </ul>
</div>
`;
